[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "UP"]
ignore = ["ANN", "D"]
fix = true

[tool.ruff.isort]
known-first-party = ["charge_transfer"]
profile = "black"
